--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,7 +13,7 @@
     <header id="header-container">
       <nav class="menu">
         <div class="menu-left">
-          <img src="../../images/inicial/logo.png" alt="Logo" class="logo" />
+          <img src="/inicial/logo.png" alt="Logo" class="logo" />
           <a href="#vhs" class="menu-item">VHS</a>
           <a href="#cassete" class="menu-item">Cassete</a>
           <a href="#generos" class="menu-item">Gêneros</a>
@@ -30,20 +30,14 @@
         </div>
       </nav>
       <div class="header-content">
-        <div class="title-subtitle">
-          <h1>Procurando por fitas antigas?</h1>
-          <h2>Nós temos um dos maiores acervos de fitas VHS do Brasil</h2>
-        </div>
-        <div class="header-actions">
-          <button>Não tem uma conta? Faça o seu cadastro já!</button>
-        </div>
-        <figure class="header-background">
-          <img
-            src="path-to-image.jpg"
-            alt="Fita K7 - Imagem de fundo do header"
-          />
-        </figure>
-      </div>
+  <div class="title-subtitle">
+    <h1>Procurando por fitas antig<span>as?</span></h1>
+    <h2>Nós temos um dos maiores acervos de fitas VHS do Brasil</h2>
+    <button class="cta-button">Não tem uma conta? Faça o seu cadastro já!</button>
+  </div>
+  <img src="/inicial/img-header.png" alt="Imagem do cabeçalho" class="header-image">
+</div>
+
     </header>
 
     <aside id="aside-container">
