--- a/public/views/style.css
+++ b/public/views/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Yaldevi:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
 * {
   margin: 0;
@@ -7,56 +8,118 @@
 }
 
 body {
+  height: 100vh;
   font-family: 'Yaldevi';
+  background: linear-gradient(
+      to left,
+      rgba(55, 245, 230, 0.8),
+      rgba(45, 185, 187, 0.8),
+      rgba(36, 125, 145, 0.8),
+      rgba(16, 4, 60, 0.8)
+    ),
+    url('/inicial/water-texture.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 #header-container {
-    background-color: #f8f8f8;
-    border-bottom: 1px solid #ddd;
+  height: 300px;
+  border-bottom: 20px solid #f0eded;
 }
 
 #header-container .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background: #f0eded;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background: #f0eded;
 }
 
 #header-container .menu .menu-left {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 #header-container .menu .menu-left .menu-item {
-    margin: 0 15px;
-    text-decoration: none;
-    color: #4a00e0;
-    font-size: 16px;
-    font-weight: bold;
+  margin: 0 15px;
+  text-decoration: none;
+  color: #0056b3;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 #header-container .menu .menu-left .menu-item:hover {
-    color: #000;
+  color: #161616;
 }
 
 #header-container .menu .menu-left .logo {
-    width: 40px;
-    height: 40px;
-    margin-right: 15px;
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
 }
 
 #header-container .menu .menu-right {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 #header-container .menu .menu-right .icon {
-    margin-left: 20px;
-    border: 1px solid red;
+  margin-left: 20px;
 }
 
-/* #header-container .menu .menu-right .icon img {
-    width: 24px;
-    height: 24px;
-} */
+#header-container .menu .menu-right .icon img {
+  width: 50px;
+  height: 50px;
+}
+
+#header-container .header-content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 10px;
+}
+
+.header-image {
+  width: 600px;
+  height: auto;
+margin-top: -100px;
+}
+
+.title-subtitle {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20%;
+}
+
+.title-subtitle h1 {
+  font-size: 48px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
+.title-subtitle h2 {
+  font-size: 24px;
+  font-weight: normal;
+  color: #f1f1f1;
+  margin-bottom: 10px;
+}
+
+.cta-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: #0056b3;
+}
