--- a/public/views/style.css
+++ b/public/views/style.css
@@ -11,7 +11,7 @@ body {
   height: 100vh;
   font-family: 'Yaldevi';
   background: linear-gradient(
-      to left,
+      to right,
       rgba(55, 245, 230, 0.8),
       rgba(45, 185, 187, 0.8),
       rgba(36, 125, 145, 0.8),
@@ -19,16 +19,23 @@ body {
     ),
     url('/inicial/water-texture.png');
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-position: center center;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
 #header-container {
-  height: 300px;
+  height: 60%;
   border-bottom: 20px solid #f0eded;
+  background: linear-gradient(
+      to left,
+      rgba(55, 245, 230, 0.8),
+      rgba(45, 185, 187, 0.8),
+      rgba(36, 125, 145, 0.8),
+      rgba(16, 4, 60, 0.8)
+    ),
+    url('/inicial/water-texture.png');
 }
 
 #header-container .menu {
@@ -74,26 +81,30 @@ body {
 #header-container .menu .menu-right .icon img {
   width: 50px;
   height: 50px;
+  cursor: pointer;
 }
 
 #header-container .header-content {
+  height: 70%;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   gap: 20px;
   padding: 10px;
 }
 
 .header-image {
-  width: 600px;
+  width: 60%;
   height: auto;
-margin-top: -100px;
+  margin-top: 40px;
 }
 
 .title-subtitle {
   display: flex;
   flex-direction: column;
-  margin-left: 20%;
+  text-align: left;
+  margin-left: 10%;
+  /* margin-top: -50px; */
 }
 
 .title-subtitle h1 {
@@ -102,6 +113,11 @@ margin-top: -100px;
   margin-bottom: 10px;
   color: #ffffff;
 }
+
+.title-subtitle h1 span {
+  text-decoration: underline #3f1fb3;
+}
+
 .title-subtitle h2 {
   font-size: 24px;
   font-weight: normal;
@@ -122,4 +138,242 @@ margin-top: -100px;
 
 .cta-button:hover {
   background-color: #0056b3;
+}
+
+#main-container {
+  display: flex;
+}
+#aside-container {
+  width: 250px;
+}
+.menu-filtros {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  background-color: #f0f0f0;
+  width: 200px;
+  padding: 20px;
+  border: 1px solid #6a41ff;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+  border-left: none;
+}
+
+.menu-filtros #ipt-pesquisar {
+  flex: 1 0 auto;
+  width: 100%;
+  padding: 10px;
+  background-color: #ccbeff;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+.menu-filtros #ipt-pesquisar::-webkit-input-placeholder {
+  font-size: 14px;
+  color: #f0eded;
+  text-align: center;
+}
+
+.menu-filtros #ipt-pesquisar:focus {
+  color: #f0f0f0;
+  outline: none;
+  box-shadow: 0 0 5px #bfaff8;
+  background: #3f1fb3;
+}
+
+.menu-filtros ul {
+  list-style: none;
+  padding: 0;
+}
+
+.menu-filtros li {
+  margin-bottom: 10px;
+}
+
+.menu-filtros a {
+  text-decoration: none;
+  color: #6a41ff;
+  display: block;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: 600;
+}
+
+.menu-filtros a:hover {
+  background-color: #e0e0e0;
+}
+
+.menu-filtros li {
+  position: relative;
+}
+
+.menu-filtros li:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -10px;
+  height: 1px;
+  background-color: #6a41ff;
+}
+
+.section-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+}
+
+.category-product {
+  text-align: center;
+  margin-bottom: 20px;
+  background: #f0eded;
+  text-transform: uppercase;
+  height: auto;
+  padding: 10px;
+  color: #6a41ff;
+  border: none;
+  border-radius: 10px;
+  font-size: 10px;
+  font-weight: lighter;
+}
+
+.cards-products {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  gap: 20px;
+  justify-content: space-around;
+}
+
+.card-product {
+  flex-basis: calc(33.33% - 20px);
+  max-width: 400px;
+  min-width: 300px;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #fff;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+
+.card-product img {
+  max-width: 100%;
+  height: auto;
+}
+
+.card-product h4,
+p {
+  color: #6a41ff;
+  font-size: 20px;
+}
+
+.card-product h4 {
+  margin: 10px 0;
+}
+
+.card-product p {
+  margin: 5px 0;
+}
+
+.card-product .buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.card-product .buttons .btn-comprar,
+.btn-descricao {
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 10px;
+  min-width: 200px;
+  height: auto;
+  cursor: pointer;
+}
+
+.card-product .btn-comprar {
+  background-color: #119111;
+  color: #e0e0e0;
+  border: none;
+}
+.card-product .btn-descricao {
+  color: #6a41ff;
+  background-color: #fff;
+  border: 1px solid #957afa;
+}
+
+.card-product .buttons .btn-comprar:hover {
+  background-color: #0056b3;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
+}
+.card-product .buttons .btn-descricao:hover {
+  background-color: #957afa;
+  color: #f0eded;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
+}
+
+
+#footer-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  padding: 20px 40px;
+  background-color: #191919;
+  color: white; 
+  justify-content: space-between;
+  margin-top: auto;
+  position: relative;
+}
+
+.creators,
+.payment,
+.contact,
+.social-media {
+  text-align: center;
+  margin-bottom: 10px; 
+}
+
+.creators h3,
+.payment h3,
+.contact h3,
+.social-media h3 {
+  font-weight: 600;
+  margin: 5px 0;
+  font-size: 16px;
+  color: #6a41ff;
+}
+.creators h3 span {
+  font-weight: 300;
+}
+
+.contact p {
+  font-size: 12px;
+}
+
+.social-media a {
+  color: #6a41ff; 
+  text-decoration: none;
+  font-size: 12px;
+}
+
+.social-media a:hover {
+  text-decoration: underline; 
+}
+
+.payment img {
+  width: 100px;
+  height: auto; 
+  display: block;
+  margin: 0 auto;
 }
