--- a/public/views/style.css
+++ b/public/views/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 #header-container {
-  height: 60%;
+  height: 500px;
   border-bottom: 20px solid #f0eded;
   background: linear-gradient(
       to left,
@@ -54,8 +54,8 @@ body {
 #header-container .menu .menu-left .menu-item {
   margin: 0 15px;
   text-decoration: none;
-  color: #0056b3;
-  font-size: 24px;
+  color: #6a41ff;
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -78,6 +78,11 @@ body {
   margin-left: 20px;
 }
 
+#header-container .menu .menu-right .icon a {
+  width: 100%;
+  height: 100%;
+}
+
 #header-container .menu .menu-right .icon img {
   width: 50px;
   height: 50px;
@@ -85,7 +90,7 @@ body {
 }
 
 #header-container .header-content {
-  height: 70%;
+  height: 400px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -94,9 +99,9 @@ body {
 }
 
 .header-image {
-  width: 60%;
+  width: 400px;
   height: auto;
-  margin-top: 40px;
+  margin-top: -40px;
 }
 
 .title-subtitle {
@@ -104,7 +109,6 @@ body {
   flex-direction: column;
   text-align: left;
   margin-left: 10%;
-  /* margin-top: -50px; */
 }
 
 .title-subtitle h1 {
@@ -245,12 +249,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-grow: 1;
-  gap: 20px;
-  justify-content: space-around;
+  gap: 10px;
 }
 
 .card-product {
-  flex-basis: calc(33.33% - 20px);
+  flex-basis: calc(33.33% - 10px);
   max-width: 400px;
   min-width: 300px;
   text-align: center;
@@ -259,7 +262,7 @@ body {
   background-color: #fff;
   padding: 20px;
   margin-bottom: 20px;
-  box-sizing: border-box;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.199);
 }
 
 .card-product img {
@@ -322,7 +325,6 @@ p {
   transform: translateY(-2px);
 }
 
-
 #footer-container {
   display: flex;
   flex-direction: row;
@@ -330,18 +332,21 @@ p {
   align-items: center;
   padding: 20px 40px;
   background-color: #191919;
-  color: white; 
+  color: white;
   justify-content: space-between;
   margin-top: auto;
   position: relative;
 }
 
-.creators,
 .payment,
 .contact,
 .social-media {
   text-align: center;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
+}
+
+.creators {
+  text-align: left;
 }
 
 .creators h3,
@@ -362,18 +367,18 @@ p {
 }
 
 .social-media a {
-  color: #6a41ff; 
+  color: #6a41ff;
   text-decoration: none;
   font-size: 12px;
 }
 
 .social-media a:hover {
-  text-decoration: underline; 
+  text-decoration: underline;
 }
 
 .payment img {
   width: 100px;
-  height: auto; 
+  height: auto;
   display: block;
   margin: 0 auto;
 }
