register/login - incompleto - Validation Error

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -25,7 +25,7 @@
               class="icon-cart"
             />
           </a>
-          <a href="/pages/login.html" class="icon">
+          <a href="/pages/auth/login.html" class="icon">
             <img src="/inicial/user-icon.png" alt="Perfil" class="icon-user" />
           </a>
         </div>
