--- a/public/views/auth/loginView.html
+++ b/public/views/auth/loginView.html
@@ -16,18 +16,19 @@
       <h2>ATENÇÃO!</h2>
       <p>Preencha todos os campos corretamente.</p>
       <div class="form-login">
-        <form action="">
+        <form action="" method="post">
           <label for="user-email">Email</label>
           <input type="email" name="user-email" id="user-email" />
           <label for="user-password">Senha</label>
           <input type="password" name="user-password" id="user-password" />
-          <button id="bt-entrar">Entrar</button>
+          <button id="bt-entrar" type="submit">Entrar</button>
         </form>
         <div class="option-login">
           <p>Não tem uma conta?</p>
-          <a href="register.html">Registrar-se</a>
+          <a href="registerView.html">Registrar-se</a>
         </div>
       </div>
     </main>
   </body>
+  <script type="module" src="js/loginManipulaInterface.mjs"></script>
 </html>
