--- a/public/views/auth/registerView.html
+++ b/public/views/auth/registerView.html
@@ -21,27 +21,28 @@
         </div>
         <div class="form">
           <h2>CADASTRE-SE</h2>
-          <form action="">
+          <form action="" method="post">
             <div class="field">
-              <label for="user-nome">Nome</label>
-              <input type="text" name="user-nome" id="user-nome" />
+              <label for="user-nome">Nome
+              <input type="text" name="user-nome" id="user-nome" autocomplete="name" autofocus/></label>
             </div>
             <div class="field">
-              <label for="user-email">Email</label>
-              <input type="email" name="user-email" id="user-email" />
+              <label for="user-email">Email
+              <input type="email" name="user-email" id="user-email" required autocapitalize="off" autocomplete="email"/></label>
             </div>
             <div class="field">
-              <label for="user-password">Senha</label>
-              <input type="password" name="user-password" id="user-password" />
+              <label for="user-password">Senha
+              <input type="password" name="user-password" id="user-password" required /></label>
             </div>
-            <input type="submit" id="bt-entrar">Entrar</input>
+            <button type="submit" id="bt-entrar">Entrar</button>
           </form>
           <div class="option-register">
             <p>Já tem uma conta?</p>
-            <a href="login.html">Logar</a>
+            <a href="loginView.html">Logar</a>
           </div>
         </div>
       </div>
     </main>
   </body>
+  <script type="module" src="js/registerManipulaInterface.mjs"></script>
 </html>
