--- a/public/views/auth/registerView.html
+++ b/public/views/auth/registerView.html
@@ -10,33 +10,53 @@
   <body>
     <header id="header-container">
       <nav id="nav-container">
-        <img src="/inicial/logo.png" alt="" class="logo" />
-        <a href="../../index.html">Inicial</a>
+        <a href="../../index.html">
+          <img src="/inicial/logo.png" alt="" class="logo"
+        /></a>
       </nav>
     </header>
     <main id="main-container">
       <div class="container">
-        <div class="image">
-          <img src="/auth/bg-fita.png" alt="Bg" class="bg-fita" />
-        </div>
+        <div class="image"></div>
         <div class="form">
           <h2>CADASTRE-SE</h2>
           <form action="" method="post">
             <div class="field">
-              <label for="user-nome">Nome
-              <input type="text" name="user-nome" id="user-nome" autocomplete="name" autofocus/></label>
+              <label for="user-nome"
+                >Nome
+                <input
+                  type="text"
+                  name="user-nome"
+                  id="user-nome"
+                  autocomplete="name"
+                  autofocus
+              /></label>
             </div>
             <div class="field">
-              <label for="user-email">Email
-              <input type="email" name="user-email" id="user-email" required autocapitalize="off" autocomplete="email"/></label>
+              <label for="user-email"
+                >Email
+                <input
+                  type="email"
+                  name="user-email"
+                  id="user-email"
+                  required
+                  autocapitalize="off"
+                  autocomplete="email"
+              /></label>
             </div>
             <div class="field">
-              <label for="user-password">Senha
-              <input type="password" name="user-password" id="user-password" required /></label>
+              <label for="user-password"
+                >Senha
+                <input
+                  type="password"
+                  name="user-password"
+                  id="user-password"
+                  required
+              /></label>
             </div>
             <button type="submit" id="bt-entrar">Entrar</button>
           </form>
-          <div class="option-register">
+          <div class="option">
             <p>Já tem uma conta?</p>
             <a href="loginView.html">Logar</a>
           </div>
