--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,11 +14,11 @@
           <a href="#todos" class="menu-item">Todos</a>
           <a href="#vhs" class="menu-item">VHS</a>
           <a href="#cassete" class="menu-item">Cassete</a>
-          <a href="#sobre" class="menu-item">Sobre</a>
+          <a href="/views/sobre.html" class="menu-item">Sobre</a>
           <a href="#curiosidades" class="menu-item">Curiosidades</a>
         </div>
         <div class="menu-right">
-          <a href="#" class="icon">
+          <a href="/pages/carrinhoView.html" class="icon">
             <img
               src="/inicial/cart-icon.png"
               alt="Carrinho"
