--- a/public/views/pages/perfilView.html
+++ b/public/views/pages/perfilView.html
@@ -5,22 +5,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página de Perfil</title>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+    <link rel="stylesheet" href="perfil.css" />
   </head>
   <body>
     <header id="header-container">
       <nav id="nav-container">
-        <img src="/inicial/logo.png" alt="" class="logo" />
-        <a href="../index.html">Inicial</a>
+        <a href="../index.html">
+          <img src="/inicial/logo.png" alt="Voltar página inicial" class="logo"
+        /></a>
       </nav>
     </header>
+    <div id="loading-spinner" style="display: none;">Carregando...</div>
     <h1>Meu Perfil</h1>
     <div id="profile-info">
+      <p id="auth-message"></p>
       <p><strong>Nome:</strong> <span id="user-name"></span></p>
       <p><strong>Email:</strong> <span id="user-email"></span></p>
     </div>
     <button id="logout-button" style="display: none">Logout</button>
     <button id="login-button" style="display: none">Fazer Login</button>
-    <script type="module" src="./src/profile.mjs"></script>
   </body>
+  <script type="module" src="./src/profile.mjs"></script>
 </html>
