--- a/public/views/auth/loginView.html
+++ b/public/views/auth/loginView.html
@@ -4,31 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="header-container">
       <nav id="nav-container">
-        <img src="/inicial/logo.png" alt="" class="logo">
-        <a href="../index.html">Inicial</a>
+        <a href="../../index.html">
+          <img src="/inicial/logo.png" alt="" class="logo" />
+        </a>
       </nav>
     </header>
     <main id="main-container">
-      <h2>ATENÇÃO!</h2>
-      <p>Preencha todos os campos corretamente.</p>
-      <div class="form-login">
-        <form action="/api/users/login" method="post">
-          <label for="user-email">Email</label>
-          <input type="email" name="email" id="user-email" required />
-          <label for="user-password">Senha</label>
-          <input type="password" name="password" id="user-password" required />
-          <button id="bt-entrar" type="submit">Entrar</button>
-        </form>
-        <div class="option-login">
-          <p>Não tem uma conta?</p>
-          <a href="registerView.html">Registrar-se</a>
+      <div class="container">
+        <div class="image"></div>
+        <div class="form">
+          <h2>LOGIN</h2>
+          <form action="" method="/api/users/login">
+            <div class="field">
+              <label for="user-email"
+                >Email
+                <input
+                  type="email"
+                  name="user-email"
+                  id="user-email"
+                  required
+                  autocapitalize="off"
+                  autocomplete="email"
+              /></label>
+            </div>
+            <div class="field">
+              <label for="user-password"
+                >Senha
+                <input
+                  type="password"
+                  name="user-password"
+                  id="user-password"
+                  required
+              /></label>
+            </div>
+            <button type="submit" id="bt-entrar">Entrar</button>
+          </form>
+          <div class="option">
+            <p>Não tem uma conta?</p>
+            <a href="registerView.html">Registrar-se</a>
+          </div>
         </div>
       </div>
     </main>
-    <script type="module" src="js/loginManipulaInterface.mjs"></script>
   </body>
+  <script type="module" src="js/loginManipulaInterface.mjs"></script>
 </html>
