--- a/public/views/index.html
+++ b/public/views/index.html
@@ -100,6 +100,13 @@
         <a href="https://www.twitter.com" target="_blank">Twitter</a>
       </div>
     </footer>
+
+    <div id="modalDescricao" class="modal" style="display: none">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p id="descricaoTexto"></p>
+      </div>
+    </div>
   </body>
   <script type="module" src="./src/js/produtoManipulaInterface.mjs"></script>
 </html>
