--- a/public/views/style.css
+++ b/public/views/style.css
@@ -283,7 +283,7 @@ p {
 }
 
 .card-product .buttons .btn-comprar,
-.btn-descricao {
+.descricao {
   margin-bottom: 10px;
   padding: 10px 20px;
   font-size: 16px;
@@ -298,7 +298,7 @@ p {
   color: #e0e0e0;
   border: none;
 }
-.card-product .btn-descricao {
+.card-product .descricao {
   color: #6a41ff;
   background-color: #fff;
   border: 1px solid #957afa;
@@ -309,7 +309,7 @@ p {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
   transform: translateY(-2px);
 }
-.card-product .buttons .btn-descricao:hover {
+.card-product .buttons .descricao:hover {
   background-color: #957afa;
   color: #f0eded;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
@@ -372,4 +372,31 @@ p {
   height: auto;
   display: block;
   margin: 0 auto;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
 }
