--- a/public/views/index.html
+++ b/public/views/index.html
@@ -49,17 +49,25 @@
       <aside id="aside-container">
         <nav class="menu-filtros">
           <ul>
-            <li><a href="#novidades" class="menu-gender">Novidades</a></li>
+            <li><a href="#crime" class="menu-gender">Crime</a></li>
             <div class="divisor"></div>
-            <li><a href="#cinema" class="menu-gender">Cinema</a></li>
+            <li><a href="#aventura" class="menu-gender">Aventura</a></li>
             <div class="divisor"></div>
-            <li><a href="#musica" class="menu-gender">Música</a></li>
+            <li><a href="#comedia" class="menu-gender">Comédia</a></li>
             <div class="divisor"></div>
-            <li><a href="#famosos" class="menu-gender">Famosos</a></li>
+            <li><a href="#romance" class="menu-gender">Romance</a></li>
             <div class="divisor"></div>
-            <li><a href="#historicos" class="menu-gender">Históricos</a></li>
+            <li><a href="#terror" class="menu-gender">Terror</a></li>
             <div class="divisor"></div>
-            <li><a href="#raros" class="menu-gender">Edições Raras</a></li>
+            <li><a href="#drama" class="menu-gender">Drama</a></li>
+            <div class="divisor"></div>
+            <li><a href="#ficcao" class="menu-gender">Ficção</a></li>
+            <div class="divisor"></div>
+            <li><a href="#acao" class="menu-gender">Ação</a></li>
+            <div class="divisor"></div>
+            <li><a href="#triller" class="menu-gender">Triller</a></li>
+            <div class="divisor"></div>
+            <li><a href="#rock" class="menu-gender">Rock</a></li>
             <div class="divisor"></div>
           </ul>
         </nav>
@@ -103,6 +111,7 @@
 
     <div id="modalDescricao" class="modal" style="display: none">
       <div class="modal-content">
+        <h3 id="tituloModal"></h3>
         <span class="close">&times;</span>
         <p id="descricaoTexto"></p>
       </div>
